--- a/src/components/ThrowsTable.scss
+++ b/src/components/ThrowsTable.scss
@@ -5,7 +5,7 @@
   margin: 1em 0;
   font-size: 130%;
   @include breakpoints.sm {
-    font-size: 100%;
+    font-size: 90%;
     align-self: stretch;
   }
 }
